tests/struct_new_field_error.june
// error: unknown field

struct Employee {
    name: string,
    age: i64,
}

fun main() {
    let employee = new shared Employee(name: "Bob", height: 123)
    println(employee.age)
}